// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/BaseLayout should render 1`] = `
<GetContext
  title={[Function]}
>
  <App>
    <BaseLayout__Wrapper>
      <Connect(withRouter(UnconnectedHeader))
        questionnaire={
          Object {
            "id": "1",
            "title": "Questionnaire",
          }
        }
      />
      <BaseLayout__Main>
        Children
      </BaseLayout__Main>
    </BaseLayout__Wrapper>
  </App>
</GetContext>
`;

exports[`components/BaseLayout should render a title 1`] = `
<GetContext
  title={[Function]}
>
  <App>
    <BaseLayout__Wrapper>
      <Connect(withRouter(UnconnectedHeader))
        questionnaire={
          Object {
            "id": "1",
            "title": "Questionnaire",
          }
        }
      />
      <BaseLayout__Main>
        <ScrollPane
          permanentScrollBar={false}
        >
          <BaseLayout__Title>
            Title
          </BaseLayout__Title>
          Children
        </ScrollPane>
      </BaseLayout__Main>
    </BaseLayout__Wrapper>
  </App>
</GetContext>
`;
